--- a/app/src/main/res/layout/muscle_item.xml
+++ b/app/src/main/res/layout/muscle_item.xml
@@ -4,7 +4,6 @@
     android:layout_height="wrap_content"
     android:orientation="horizontal">
 
-
     <ImageView
         android:id="@+id/ivMuscleImage"
         android:layout_width="100dp"
@@ -17,14 +16,14 @@
         android:id="@+id/tvMuscleName"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:textStyle="bold"
+        android:textColor="#FF0000"
         android:text="prueba"
-        android:textSize="16sp"
+        android:textSize="30sp"
         android:padding="16dp"
         android:clickable="true"
         android:focusable="true"
         android:background="?android:attr/selectableItemBackground"
         />
-
-
 
 </LinearLayout>
