--- a/app/src/main/res/layout/fragment_musculo.xml
+++ b/app/src/main/res/layout/fragment_musculo.xml
@@ -8,7 +8,7 @@
     <!-- Lista de músculos -->
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvMuscles"
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_weight="1"/>
 
