--- a/app/src/main/res/layout/activity_datos_personales.xml
+++ b/app/src/main/res/layout/activity_datos_personales.xml
@@ -40,6 +40,7 @@
             android:id="@+id/etAltura"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:inputType="number"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
@@ -67,6 +68,7 @@
             android:id="@+id/etEdad"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:inputType="number"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
